--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+kcheckgmail (0.5.4-2) unstable; urgency=low
+
+  * Acknowledge NMU: FTBFS in hppa & other arches
+    -- thanks, Lamont! (Closes: #334034)
+
+  * Solve authentication problems (Closes: #328515)
+    (fix forwarded from KUbuntu; thanks, guys!)
+
+  * Fixed .desktop file - bad encoding (Closes: #333396)
+    - update-desktop-database still complains -- is it buggy?
+
+  * Package sponsored by Roberto Lumbreras <rover@debian.org>
+
+ -- Jose Luis Tallon <jltallon@adv-solutions.net>  Tue, 18 Oct 2005 21:47:04 +0200
+
 kcheckgmail (0.5.4-1.1) unstable; urgency=low
 
   * Non-maintainer upload.
