--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 Matthew Wlazlo <mwlazlo@gmail.com>
 Rogério Pereira Araújo <rogerio.araujo@gmail.com>
 Samuele Kaplun <kaplun@aliceposta.it>
+Loic Pefferkorn <loic@dev.erodia.net>
