--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+kcheckgmail (0.5.5-1.1) unstable; urgency=low
+
+  * NMU.
+  * Remove build dependency on g++-3.4. Closes: #385834.
+
+ -- Matthias Klose <doko@debian.org>  Sun,  3 Sep 2006 13:44:51 +0000
+
 kcheckgmail (0.5.5-1) unstable; urgency=low
 
   * New upstream version
