--- a/po/pl.po
+++ b/po/pl.po
@@ -1,7 +1,7 @@
 # translation of kcheckgmail-pl.po to 
 # This file is distributed under the same license as the PACKAGE package.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER.
-# JarosÅ‚aw Kamper <jaroslawkamper@gmail.com>, 2005.
+# Jarosław Kamper <jaroslawkamper@gmail.com>, 2005.
 #
 msgid ""
 msgstr ""
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-11-18 12:00+1100\n"
 "PO-Revision-Date: 2005-01-15 15:34+0100\n"
-"Last-Translator: JarosÅ‚aw Kamper <jaroslawkamper@gmail.com>\n"
+"Last-Translator: Jarosław Kamper <jaroslawkamper@gmail.com>\n"
 "Language-Team: Polish <translation-team-pl@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -25,7 +25,7 @@ msgid ""
 "Your names"
 msgstr ""
 "Polish\n"
-"JarosÅ‚aw Kamper"
+"Jarosław Kamper"
 
 #: _translatorinfo.cpp:3
 msgid ""
@@ -51,7 +51,7 @@ msgstr "Zasobnik systemowy"
 #: rc.cpp:3
 #: rc.cpp:31
 msgid "Open browser to Gmail on left click"
-msgstr "OtwÃ³rz przeglÄ…darkÄ™ do Gmaila lewym klikiem"
+msgstr "Otwórz przeglądarkę do Gmaila lewym klikiem"
 
 #: appletsettingswidget.cpp:97
 #: prefs.cpp:66
@@ -59,22 +59,22 @@ msgstr "OtwÃ³rz przeglÄ…darkÄ™ do Gmaila lewym klikiem"
 #: rc.cpp:33
 #, fuzzy
 msgid "Catch accidental left clicks when launching the browser"
-msgstr "Odnotowuj przypadkowe lewoklikniÄ™cia podczas uruchamiania przeglÄ…darki ;)"
+msgstr "Odnotowuj przypadkowe lewokliknięcia podczas uruchamiania przeglądarki ;)"
 
 #: appletsettingswidget.cpp:98
 #: rc.cpp:5
 msgid "Browser"
-msgstr "PrzeglÄ…darka"
+msgstr "Przeglądarka"
 
 #: appletsettingswidget.cpp:99
 #: rc.cpp:6
 msgid "Use the default KDE browser"
-msgstr "UÅ¼yj domyÅ›lnej przeglÄ…darki KDE"
+msgstr "Użyj domyślnej przeglądarki KDE"
 
 #: appletsettingswidget.cpp:100
 #: rc.cpp:7
 msgid "Use an alternative browser"
-msgstr "UÅ¼yj alternatywnej przeglÄ…darki"
+msgstr "Użyj alternatywnej przeglądarki"
 
 #: appletsettingswidget.cpp:101
 #: rc.cpp:8
@@ -86,28 +86,28 @@ msgstr "Debug"
 #: rc.cpp:9
 #: rc.cpp:29
 msgid "Display an alert if GMail version changes"
-msgstr "WyÅ›wietl ostrzeÅ¼enie przy zmianie wersji Gmaila"
+msgstr "Wyświetl ostrzeżenie przy zmianie wersji Gmaila"
 
 #: gmail.cpp:180
 msgid "Invalid username or password"
-msgstr "NieprawidÅ‚owa nazwa uÅ¼ytkownika lub hasÅ‚o"
+msgstr "Nieprawidłowa nazwa użytkownika lub hasło"
 
 #: gmail.cpp:247
 msgid "Unknown error retrieving cookies"
-msgstr "Nieznany bÅ‚Ä…d podczas odbioru plikÃ³w cookie"
+msgstr "Nieznany błąd podczas odbioru plików cookie"
 
 #: gmailwalletmanager.cpp:99
 msgid "KCheckGmail could not open the wallet. Please check your preferences."
-msgstr "KCheckGmail nie byÅ‚ w stanie otworzyÄ‡ portfela. SprawdÅº swoje ustawienia."
+msgstr "KCheckGmail nie był w stanie otworzyć portfela. Sprawdź swoje ustawienia."
 
 #: gmailwalletmanager.cpp:189
 #, fuzzy
 msgid "KCheckGmail cannot store your password securely in your wallet. Do you want to save the password in the unsafe configuration file instead?"
-msgstr "KCheckGmail nie jest w stanie zapisaÄ‡ bezpiecznie Twojego hasÅ‚a w KPortfel. Czy chcesz zapisaÄ‡ hasÅ‚o w sposÃ³b niezabezpieczony?"
+msgstr "KCheckGmail nie jest w stanie zapisać bezpiecznie Twojego hasła w KPortfel. Czy chcesz zapisać hasło w sposób niezabezpieczony?"
 
 #: gmailwalletmanager.cpp:191
 msgid "Unable to store secure password"
-msgstr "Nie moÅ¼na zapisaÄ‡ bezpiecznego hasÅ‚a"
+msgstr "Nie można zapisać bezpiecznego hasła"
 
 #: gmailwalletmanager.cpp:192
 #: gmailwalletmanager.cpp:238
@@ -116,11 +116,11 @@ msgstr "Zapisz niezabezpieczone"
 
 #: gmailwalletmanager.cpp:235
 msgid "KCheckGmail cannot retrieve your password from your wallet. Do you want to save the password in the unsafe configuration file instead?"
-msgstr "KCheckGmail nie jest w stanie odzyskaÄ‡ Twojego hasÅ‚a z KPortfel. Czy chcesz zapisaÄ‡ hasÅ‚o w sposÃ³b niezabezpieczony?"
+msgstr "KCheckGmail nie jest w stanie odzyskać Twojego hasła z KPortfel. Czy chcesz zapisać hasło w sposób niezabezpieczony?"
 
 #: gmailwalletmanager.cpp:237
 msgid "Unable to retrieve secure password"
-msgstr "Nie mogÄ™ odzyskaÄ‡ bezpiecznego hasÅ‚a"
+msgstr "Nie mogę odzyskać bezpiecznego hasła"
 
 #: kcheckgmailtray.cpp:115
 #: main.cpp:45
@@ -129,7 +129,7 @@ msgstr "KCheckGmail"
 
 #: kcheckgmailtray.cpp:117
 msgid "Configure &Notications..."
-msgstr "Ustawienia &PowiadomieÅ„"
+msgstr "Ustawienia &Powiadomień"
 
 #: kcheckgmailtray.cpp:119
 msgid "&Configure KCheckGmail..."
@@ -138,31 +138,31 @@ msgstr "&Ustawienia KCheckGmaila"
 #: kcheckgmailtray.cpp:122
 #: kcheckgmailtray.cpp:383
 msgid "Login and Chec&k Mail"
-msgstr "Zaloguj i Sprawd&Åº pocztÄ™"
+msgstr "Zaloguj i Sprawd&ź pocztę"
 
 #: kcheckgmailtray.cpp:125
 msgid "&Launch Browser"
-msgstr "&Uruchom przeglÄ…darkÄ™"
+msgstr "&Uruchom przeglądarkę"
 
 #: kcheckgmailtray.cpp:127
 msgid "Threads"
-msgstr "WÄ…tki"
+msgstr "Wątki"
 
 #: kcheckgmailtray.cpp:228
 msgid "Please enter a password"
-msgstr "ProszÄ™ wpisaÄ‡ hasÅ‚o"
+msgstr "Proszę wpisać hasło"
 
 #: kcheckgmailtray.cpp:351
 msgid "There is <b>1</b> new message"
-msgstr "<b>1</b>nowa wiadomoÅ›Ä‡"
+msgstr "<b>1</b>nowa wiadomość"
 
 #: kcheckgmailtray.cpp:353
 msgid "There are <b>%1</b> new messages"
-msgstr "Masz <b>%1</b> nowych wiadomoÅ›ci"
+msgstr "Masz <b>%1</b> nowych wiadomości"
 
 #: kcheckgmailtray.cpp:377
 msgid "An error occurred logging in to Gmail<br><b>%1</b>"
-msgstr "PojawiÅ‚ siÄ™ bÅ‚Ä…d podczas logowania do Gmaila <b>%1</b>"
+msgstr "Pojawił się błąd podczas logowania do Gmaila <b>%1</b>"
 
 #: kcheckgmailtray.cpp:387
 msgid "Now logged in to Gmail!"
@@ -170,7 +170,7 @@ msgstr "Zalogowany do Gmaila!"
 
 #: kcheckgmailtray.cpp:388
 msgid "Chec&k Mail Now"
-msgstr "Sprawd&Åº teraz pocztÄ™"
+msgstr "Sprawd&ź teraz pocztę"
 
 #: kcheckgmailtray.cpp:431
 msgid "Login"
@@ -182,7 +182,7 @@ msgstr "Ustawienia logowania"
 
 #: kcheckgmailtray.cpp:434
 msgid "Network"
-msgstr "SieÄ‡"
+msgstr "Sieć"
 
 #: kcheckgmailtray.cpp:434
 msgid "Network Settings"
@@ -194,11 +194,11 @@ msgstr "Zachowanie"
 
 #: kcheckgmailtray.cpp:467
 msgid "Gmail has been upgraded since this version of KCheckGmail was released. This may cause all sort of strange errors. Please check for an upgrade to KCheckGmail soon."
-msgstr "Od czasu tej wersji KCheckGmail zostaÅ‚ uaktualniony. To moÅ¼e skutkowaÄ‡ rÃ³Å¼nego rodzaju dziwnymi bÅ‚Ä™dami. ProszÄ™ wkrÃ³tce sprawdziÄ‡ dostÄ™pne aktualizacje KCheckGmaila."
+msgstr "Od czasu tej wersji KCheckGmail został uaktualniony. To może skutkować różnego rodzaju dziwnymi błędami. Proszę wkrótce sprawdzić dostępne aktualizacje KCheckGmaila."
 
 #: kcheckgmailtray.cpp:468
 msgid "Version changed"
-msgstr "Wersja siÄ™ zmieniÅ‚a"
+msgstr "Wersja się zmieniła"
 
 #: loginsettingswidget.cpp:74
 #: rc.cpp:10
@@ -208,12 +208,12 @@ msgstr ""
 #: loginsettingswidget.cpp:75
 #: rc.cpp:11
 msgid "Username:"
-msgstr "Nazwa uÅ¼ytkownika:"
+msgstr "Nazwa użytkownika:"
 
 #: loginsettingswidget.cpp:76
 #: rc.cpp:12
 msgid "Password:"
-msgstr "HasÅ‚o:"
+msgstr "Hasło:"
 
 #: loginsettingswidget.cpp:77
 #: prefs.cpp:51
@@ -221,51 +221,51 @@ msgstr "HasÅ‚o:"
 #: rc.cpp:27
 #, fuzzy
 msgid "Use KDE Wallet to store password"
-msgstr "UÅ¼yj KPortfel do przechowywania hasÅ‚a"
+msgstr "Użyj KPortfel do przechowywania hasła"
 
 #: main.cpp:36
 msgid "Application is being auto-started at KDE session start"
-msgstr "Aplikacja bÄ™dzie automatycznie uruchamiana podczas startu sesji KDE"
+msgstr "Aplikacja będzie automatycznie uruchamiana podczas startu sesji KDE"
 
 #: main.cpp:48
 msgid ""
 "System tray application to display how many\n"
 "email messages you have in your Gmail account."
 msgstr ""
-"Aplikacja zasobnika systemowa sÅ‚uÅ¼Ä…ca do wyÅ›wietlania\n"
-"iloÅ›ci wiadomoÅ›ci w Twoim koncie Gmaila"
+"Aplikacja zasobnika systemowa służąca do wyświetlania\n"
+"ilości wiadomości w Twoim koncie Gmaila"
 
 #: main.cpp:55
 msgid "Primary author and maintainer"
-msgstr "GÅ‚Ã³wny autor i opiekun"
+msgstr "Główny autor i opiekun"
 
 #: main.cpp:56
 msgid "Brazilian Portuguese Translation"
-msgstr "brazylijsko portugalskie tÅ‚umaczenie"
+msgstr "brazylijsko portugalskie tłumaczenie"
 
 #: main.cpp:57
 msgid "Italian Translation"
-msgstr "wÅ‚oskie tÅ‚umaczenie"
+msgstr "włoskie tłumaczenie"
 
 #: main.cpp:58
 msgid "Spanish Translation"
-msgstr "hiszpaÅ„skie tÅ‚umaczenie"
+msgstr "hiszpańskie tłumaczenie"
 
 #: main.cpp:59
 msgid "German Translation"
-msgstr "niemieckie tÅ‚umaczenie"
+msgstr "niemieckie tłumaczenie"
 
 #: main.cpp:60
 msgid "Russian Translation"
-msgstr "rosyjskie tÅ‚umaczenie"
+msgstr "rosyjskie tłumaczenie"
 
 #: main.cpp:61
 msgid "German Translation Updates"
-msgstr "Aktualizacja niemieckiego tÅ‚umaczenia"
+msgstr "Aktualizacja niemieckiego tłumaczenia"
 
 #: main.cpp:62
 msgid "French Translation"
-msgstr "francuskie tÅ‚umaczenie"
+msgstr "francuskie tłumaczenie"
 
 #: netsettingswidget.cpp:63
 #: rc.cpp:14
@@ -275,7 +275,7 @@ msgstr ""
 #: netsettingswidget.cpp:64
 #: rc.cpp:15
 msgid "Checking Interval"
-msgstr "Czas miÄ™dzy sprawdzeniami"
+msgstr "Czas między sprawdzeniami"
 
 #: netsettingswidget.cpp:65
 #: rc.cpp:16
@@ -287,12 +287,12 @@ msgstr " sekund"
 #: rc.cpp:17
 #: rc.cpp:21
 msgid "Use https connections for checking mail"
-msgstr "UÅ¼yj poÅ‚Ä…czenia https do sprawdzania wiadomoÅ›ci"
+msgstr "Użyj połączenia https do sprawdzania wiadomości"
 
 #: netsettingswidget.cpp:67
 #: rc.cpp:18
 msgid "<blockquote>Use secure connections when checking for new mail. Note that the login procedure uses https regardless of this setting.</blockquote>"
-msgstr "<blockquote>UÅ¼yj bezpiecznych poÅ‚Ä…czeÅ„ do sprawdzania poczty. ZwrÃ³Ä‡ uwagÄ™, Å¼e procedura logowania uÅ¼ywa https niezaleÅ¼nie od ustawieÅ„.</blockquote>"
+msgstr "<blockquote>Użyj bezpiecznych połączeń do sprawdzania poczty. Zwróć uwagę, że procedura logowania używa https niezależnie od ustawień.</blockquote>"
 
 #: prefs.cpp:32
 #: rc.cpp:19
@@ -302,73 +302,73 @@ msgstr ""
 #: prefs.cpp:33
 #: rc.cpp:20
 msgid "How many seconds to wait before checking for new mail."
-msgstr "Ile sekund czekaÄ‡ przed ponownym sprawdzeniem nowych wiadomoÅ›ci"
+msgstr "Ile sekund czekać przed ponownym sprawdzeniem nowych wiadomości"
 
 #: prefs.cpp:37
 #: rc.cpp:22
 msgid "Use secure connections when checking for new mail. Note that the login procedure uses https regardless of this setting."
-msgstr "UÅ¼yj bezpiecznych poÅ‚Ä…czeÅ„ do sprawdzania poczty. ZwrÃ³Ä‡ uwagÄ™, Å¼e procedura logowania uÅ¼ywa https niezaleÅ¼nie od ustawieÅ„."
+msgstr "Użyj bezpiecznych połączeń do sprawdzania poczty. Zwróć uwagę, że procedura logowania używa https niezależnie od ustawień."
 
 #: prefs.cpp:43
 #: rc.cpp:23
 msgid "Username"
-msgstr "Nazwa uÅ¼ytkownika"
+msgstr "Nazwa użytkownika"
 
 #: prefs.cpp:44
 #: rc.cpp:24
 msgid "Your Gmail username"
-msgstr "Nazwa uÅ¼ytkownika Gmail"
+msgstr "Nazwa użytkownika Gmail"
 
 #: prefs.cpp:47
 #: rc.cpp:25
 msgid "Password"
-msgstr "HasÅ‚o"
+msgstr "Hasło"
 
 #: prefs.cpp:48
 #: rc.cpp:26
 msgid "Password for checking your Gmail account"
-msgstr "HasÅ‚o do sprawdzania Twojego konta Gmailowego"
+msgstr "Hasło do sprawdzania Twojego konta Gmailowego"
 
 #: prefs.cpp:52
 #: rc.cpp:28
 msgid "Use the KDE Wallet system to store your Gmail password."
-msgstr "UÅ¼yj KPortfel do przechowywania Twojego hasÅ‚a GMail."
+msgstr "Użyj KPortfel do przechowywania Twojego hasła GMail."
 
 #: prefs.cpp:56
 #: rc.cpp:30
 msgid "If Google update the GMail code, display an alert"
-msgstr "Gdy Google zaktualizuje Gmaila wyÅ›wietl ostrzeÅ¼enie"
+msgstr "Gdy Google zaktualizuje Gmaila wyświetl ostrzeżenie"
 
 #: prefs.cpp:63
 #: rc.cpp:32
 msgid "If enabled, launch the default KDE web browser when the KCheckGmail icon is clicked."
-msgstr "Gdy aktywne, uruchom domyÅ›lnÄ… przeglÄ…darkÄ™ KDE po klikniÄ™ciu ikony KCheckGmail"
+msgstr "Gdy aktywne, uruchom domyślną przeglądarkę KDE po kliknięciu ikony KCheckGmail"
 
 #: prefs.cpp:67
 #: rc.cpp:34
 msgid "If enabled, every time you click on the KCheckGmail icon will disable it for a few seconds, thus preventing you from accidentaly opening more than one window"
-msgstr "Gdy aktywne, kaÅ¼de klikniÄ™cie w ikonÄ™ KCheckGmaila bÄ™dzie jÄ… deaktywowaÅ‚o na kilka sekund, Å¼eby zapobiec przypadkowemu otwieraniu wiÄ™cej niÅ¼ jednego okna przeglÄ…darki"
+msgstr "Gdy aktywne, każde kliknięcie w ikonę KCheckGmaila będzie ją deaktywowało na kilka sekund, żeby zapobiec przypadkowemu otwieraniu więcej niż jednego okna przeglądarki"
 
 #: prefs.cpp:70
 #: rc.cpp:35
 msgid "Use the KDE default browser"
-msgstr "UÅ¼yj domyÅ›lnej przeglÄ…darki KDE"
+msgstr "Użyj domyślnej przeglądarki KDE"
 
 #: prefs.cpp:71
 #: rc.cpp:36
 msgid "Use whatever browser is configured as the KDE default to check your Gmail"
-msgstr "UÅ¼yj jakiejkolwiek przeglÄ…darki ustawionej domyÅ›lnie w KDE do sprawdzenia Twojego Gmaila"
+msgstr "Użyj jakiejkolwiek przeglądarki ustawionej domyślnie w KDE do sprawdzenia Twojego Gmaila"
 
 #: prefs.cpp:74
 #: prefs.cpp:77
 #: rc.cpp:37
 #: rc.cpp:38
 msgid "Use a custom browser"
-msgstr "UÅ¼yj domyÅ›lnej przeglÄ…darki"
+msgstr "Użyj domyślnej przeglądarki"
 
 #: prefs.cpp:78
 #: rc.cpp:39
 msgid "Use a custom browser other than the KDE default to check your Gmail"
-msgstr "UÅ¼yj domyÅ›lnej przeglÄ…darki innej niÅ¼ domyÅ›lna w KDE do sprawdzania gmaila"
+msgstr "Użyj domyślnej przeglądarki innej niż domyślna w KDE do sprawdzania gmaila"
 
 
