--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,4 @@ Matthew Wlazlo <mwlazlo@gmail.com>
 Rogério Pereira Araújo <rogerio.araujo@gmail.com>
 Samuele Kaplun <kaplun@aliceposta.it>
 Loic Pefferkorn <loic@dev.erodia.net>
+Raphael Geissert <atomo64@gmail.com>
