--- a/po/es.po
+++ b/po/es.po
@@ -12,204 +12,551 @@ msgstr ""
 "Project-Id-Version: es_ES\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-08-06 22:32-0400\n"
-"PO-Revision-Date: 2004-10-02 11:17+0200\n"
-"Last-Translator: Felipe Morales Moreno <felipe.morales@wanadoo.es>\n"
+"PO-Revision-Date: 2007-03-22 21:49-0600\n"
+"Last-Translator: Raphael Geissert <atomo64@gmail.com>\n"
 "Language-Team:  <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.3.1\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Poedit-Language: Spanish\n"
 
 #: _translatorinfo.cpp:1
 msgid ""
 "_: NAME OF TRANSLATORS\n"
 "Your names"
-msgstr "Felipe Morales"
+msgstr "Felipe Morales, Raphael Geissert"
 
 #: _translatorinfo.cpp:3
 msgid ""
 "_: EMAIL OF TRANSLATORS\n"
 "Your emails"
-msgstr "felipe.morales@wanadoo.es"
+msgstr "felipe.morales@wanadoo.es, atomo64@gmail.com"
 
-#: appletsettingswidget.cpp:88
-msgid "AppletSettingsWidget"
-msgstr "AppletSettingsWidget"
+#: gmail.cpp:233
+#: gmail.cpp:252
+msgid "Invalid username or password"
+msgstr "Nombre de usuario o clave incorrecto"
 
-#: appletsettingswidget.cpp:89
-msgid "Tray Icon"
-msgstr "Icono de Bandeja del Sistema"
+#: gmail.cpp:239
+msgid "GMail's login procedure has changed, check for new version"
+msgstr "El procedimiento de inicio de sesión ha cambiado, verifica la disponibilidad de una nueva versión"
 
-#: appletsettingswidget.cpp:90 prefs.cpp:50
-msgid "Open browser to Gmail on left click"
-msgstr "Abrir navegador con Gmail con un click izquierdo"
+#: gmail.cpp:350
+msgid "Unknown error retrieving cookies"
+msgstr "Error desconocido al obtener las cookies"
 
-#: appletsettingswidget.cpp:91 prefs.cpp:54
-msgid "Catch accidental left clicks when launching the browser"
-msgstr "Capturar clicks izquierdos accidentales en la apertura del navegador"
+#: gmailparser.cpp:48
+msgid "Spanish"
+msgstr "Español"
 
-#: appletsettingswidget.cpp:92
-msgid "Browser"
-msgstr "Browser"
+#: gmailparser.cpp:49
+msgid "French"
+msgstr "Francés"
 
-#: appletsettingswidget.cpp:93
-msgid "Use the default KDE browser"
-msgstr "Utilizar el navegador predeterminado de KDE"
+#: gmailparser.cpp:50
+msgid "Italian"
+msgstr "Italiano"
 
-#: appletsettingswidget.cpp:94
-msgid "Use an alternative browser"
-msgstr "Utilizar un navegador alternativo"
+#: gmailparser.cpp:51
+msgid "German"
+msgstr "Alemán"
 
-#: kcheckgmailapp.moc.cpp:34 kcheckgmailapp.moc.cpp:42
-msgid "KCheckGmailApp"
-msgstr "KCheckGmailApp"
+#: gmailparser.cpp:52
+msgid "English (US)"
+msgstr "Inglés (EUA)"
 
-#: kcheckgmailtray.cpp:97 main.cpp:43
+#: gmailparser.cpp:53
+msgid "English (UK)"
+msgstr "Inglés (GB)"
+
+#: gmailparser.cpp:54
+msgid "Portuguese"
+msgstr "Portugués"
+
+#: gmailparser.cpp:55
+msgid "Turkish"
+msgstr "Turco"
+
+#: gmailparser.cpp:56
+msgid "Polish"
+msgstr "Polaco"
+
+#: gmailparser.cpp:57
+msgid "Russian"
+msgstr "Ruso"
+
+#: gmailparser.cpp:58
+#: gmailparser.cpp:68
+msgid "Croatian"
+msgstr "Croata"
+
+#: gmailparser.cpp:59
+msgid "Dutch"
+msgstr "Holandés"
+
+#: gmailparser.cpp:60
+msgid "Hungarian"
+msgstr "Húngaro"
+
+#: gmailparser.cpp:61
+msgid "Swedish"
+msgstr "Sueco"
+
+#: gmailparser.cpp:62
+msgid "Norwegian"
+msgstr "Noruego"
+
+#: gmailparser.cpp:63
+msgid "Lithuanian"
+msgstr "Lituano"
+
+#: gmailparser.cpp:64
+msgid "Hebrew"
+msgstr "Hebreo"
+
+#: gmailparser.cpp:65
+msgid "Greek"
+msgstr "Griego"
+
+#: gmailparser.cpp:66
+msgid "Chinese Simplified"
+msgstr "Chino simplificado"
+
+#: gmailparser.cpp:67
+msgid "Czech"
+msgstr "Checo"
+
+#: gmailparser.cpp:69
+msgid "Catalan"
+msgstr "Catalán"
+
+#: gmailparser.cpp:70
+msgid "Arabic"
+msgstr "Árabe"
+
+#: gmailwalletmanager.cpp:99
+msgid "KCheckGmail could not open the wallet. Please check your preferences."
+msgstr "KCheckGmail no pudo abrir la billetera. Por favor checa tus preferencias."
+
+#: gmailwalletmanager.cpp:187
+msgid "KCheckGmail cannot store your password securely in your wallet. Do you want to save the password in the unsafe configuration file instead?"
+msgstr "KCheckGmail no pudo guardar la clave seguramente en tu billetera. ¿Desea guardar la contraseña en el archivo de configuración (inseguro)?"
+
+#: gmailwalletmanager.cpp:189
+msgid "Unable to store secure password"
+msgstr "No ha sido posible guardar la clave seguramente"
+
+#: gmailwalletmanager.cpp:190
+#: gmailwalletmanager.cpp:236
+msgid "Store unsafe"
+msgstr "Guardar inseguramente"
+
+#: gmailwalletmanager.cpp:233
+msgid "KCheckGmail cannot retrieve your password from your wallet. Do you want to save the password in the unsafe configuration file instead?"
+msgstr "KCheckGmail no pudo obtener la clave desde tu billetera. ¿Desea guardar la contraseña en el archivo de configuración (inseguro)?"
+
+#: gmailwalletmanager.cpp:235
+msgid "Unable to retrieve secure password"
+msgstr "No ha sido posible obtener la clave seguramente"
+
+#: kcheckgmailtray.cpp:123
+#: main.cpp:43
 msgid "KCheckGmail"
 msgstr "KCheckGmail"
 
-#: kcheckgmailtray.cpp:99
+#: kcheckgmailtray.cpp:125
 msgid "Configure &Notications..."
 msgstr "Configurar &Notificaciones..."
 
-#: kcheckgmailtray.cpp:101
+#: kcheckgmailtray.cpp:127
 msgid "&Configure KCheckGmail..."
 msgstr "&Configurar KCheckGmail..."
 
-#: kcheckgmailtray.cpp:104 kcheckgmailtray.cpp:243
+#: kcheckgmailtray.cpp:130
+#: kcheckgmailtray.cpp:419
 msgid "Login and Chec&k Mail"
 msgstr "&Acceder y Comprobar Correo"
 
-#: kcheckgmailtray.cpp:107
+#: kcheckgmailtray.cpp:133
 msgid "&Launch Browser"
 msgstr "&Lanzar navegador"
 
-#: kcheckgmailtray.cpp:216
+#: kcheckgmailtray.cpp:135
+msgid "Co&mpose Mail"
+msgstr "&Escribir correo"
+
+#: kcheckgmailtray.cpp:137
+msgid "Threads"
+msgstr "Conversaciones"
+
+#: kcheckgmailtray.cpp:248
+msgid "No account information has been entered. Do you want to quit?"
+msgstr "No has introducido ninguna información sobre la cuenta. ¿Deseas salir?"
+
+#: kcheckgmailtray.cpp:388
 msgid "There is <b>1</b> new message"
 msgstr "Hay <b>1</b> nuevo mensaje"
 
-#: kcheckgmailtray.cpp:218
-msgid "There are <b>%1</b> new messages"
-msgstr "Hay <b>%1</b> nuevos mensajes"
-
-#: kcheckgmailtray.cpp:237
+#: kcheckgmailtray.cpp:413
 msgid "An error occurred logging in to Gmail<br><b>%1</b>"
-msgstr "Un error ocurrió accediendo a Gmail<br><b>%1</b>"
+msgstr "Un error ha ocurrido al acceder a a Gmail <br><b>%1</b>"
 
-#: kcheckgmailtray.cpp:247
+#: kcheckgmailtray.cpp:423
 msgid "Now logged in to Gmail!"
 msgstr "Conectado con éxito a Gmail!"
 
-#: kcheckgmailtray.cpp:248
+#: kcheckgmailtray.cpp:424
 msgid "Chec&k Mail Now"
 msgstr "Comprobar Correo A&hora"
 
-#: kcheckgmailtray.cpp:292
+#: kcheckgmailtray.cpp:469
 msgid "Login"
 msgstr "Acceso"
 
-#: kcheckgmailtray.cpp:292
+#: kcheckgmailtray.cpp:469
 msgid "Login Settings"
 msgstr "Configuración del acceso"
 
-#: kcheckgmailtray.cpp:295
+#: kcheckgmailtray.cpp:472
 msgid "Network"
 msgstr "Red"
 
-#: kcheckgmailtray.cpp:295
+#: kcheckgmailtray.cpp:472
 msgid "Network Settings"
 msgstr "Configuración de la red"
 
-#: kcheckgmailtray.cpp:298
-msgid "Applet"
-msgstr "Applet"
+#: kcheckgmailtray.cpp:475
+msgid "Behavior"
+msgstr "Comporamiento"
 
-#: kcheckgmailtray.cpp:298
-msgid "Applet Settings"
-msgstr "Configuración del Applet"
+#: kcheckgmailtray.cpp:505
+msgid "Gmail has been upgraded since this version of KCheckGmail was released. This may cause all sort of strange errors. Please check for an upgrade to KCheckGmail soon."
+msgstr "Gmail ha sido actualizado desde que esta versión de KCheckGmail fue publicada. Esto puede causar todo tipo de errores extraños. Por favor comprueba si hay una nueva versión disponible lo más pronto posible."
 
-#: kcheckgmailtray.moc.cpp:34 kcheckgmailtray.moc.cpp:42
-msgid "KCheckGmailTray"
-msgstr "KCheckGmailTray"
+#: kcheckgmailtray.cpp:506
+msgid "Version changed"
+msgstr "Versión cambiada"
 
-#: loginsettingswidget.cpp:69
+#: main.cpp:36
+msgid "Display legal information"
+msgstr "Mostrar información legal"
+
+#: main.cpp:46
+msgid ""
+"System tray application to display how many\n"
+"new email messages you have in your Gmail account."
+msgstr ""
+"Aplicación de la barra del sistema para mostrar\n"
+" cuántos nuevos mensajes de correo se tienen\n"
+" en una cuenta de Gmail."
+
+#: main.cpp:54
+msgid "Primary author and maintainer"
+msgstr "Autor principal y mantenedor"
+
+#: main.cpp:55
+msgid "Maintainer"
+msgstr "Mantenedor"
+
+#: main.cpp:57
+msgid "Brazilian Portuguese Translation"
+msgstr "Traducción al Portugués de Brasil"
+
+#: main.cpp:58
+msgid "Italian Translation"
+msgstr "Traducción al Italiano"
+
+#: main.cpp:59
+msgid "Spanish Translation"
+msgstr "Traducción al Español"
+
+#: main.cpp:60
+msgid "German Translation"
+msgstr "Traducción al Alemán"
+
+#: main.cpp:61
+msgid "Russian Translation"
+msgstr "Traducción al Ruso"
+
+#: main.cpp:62
+msgid "German Translation Updates"
+msgstr "Actualizaciones a la traducción al Alemán"
+
+#: main.cpp:63
+msgid "French Translation"
+msgstr "Traducción al Francés"
+
+#: main.cpp:64
+msgid "Polish Translation"
+msgstr "Traducción al Polaco"
+
+#: main.cpp:65
+msgid "Turkish Translation"
+msgstr "Traducción al Turco"
+
+#: main.cpp:66
+msgid "Hungarian Translation"
+msgstr "Traducción al Húngaro"
+
+#: main.cpp:67
+msgid "Swedish Translation"
+msgstr "Traducción al Sueco"
+
+#: main.cpp:68
+msgid "Lithuanian Translation"
+msgstr "Traducción al Lituano"
+
+#: main.cpp:69
+msgid "Estonian Translation"
+msgstr "Traducción al Estonio"
+
+#: main.cpp:81
+msgid ""
+"Legal Information:\n"
+"Google, Gmail and Google Mail are registered trademarks of Google Inc.\n"
+"KCheckGMail nor it's authors are in any way affiliated nor endorsed by Google Inc."
+msgstr ""
+"Información legal:\n"
+"Google, Gmail y Google Mail son marcas registradas de Google Inc.\n"
+"Ni KCheckGMail ni sus autores están de ninguna manera afiliados ni son apoyados por Google Inc."
+
+#. i18n: file appletsettingswidget.ui line 16
+#: rc.cpp:3
+#, no-c-format
+msgid "AppletSettingsWidget"
+msgstr "AppletSettingsWidget"
+
+#. i18n: file appletsettingswidget.ui line 33
+#: rc.cpp:6
+#, no-c-format
+msgid "Tray Icon"
+msgstr "Icono de Bandeja del Sistema"
+
+#. i18n: file appletsettingswidget.ui line 44
+#. i18n: file prefs.kcfg line 48
+#: rc.cpp:9
+#: rc.cpp:105
+#, no-c-format
+msgid "Open browser to Gmail on left click"
+msgstr "Abrir navegador en Gmail con un click izquierdo"
+
+#. i18n: file appletsettingswidget.ui line 52
+#. i18n: file prefs.kcfg line 53
+#: rc.cpp:12
+#: rc.cpp:111
+#, no-c-format
+msgid "Catch accidental left clicks when launching the browser"
+msgstr "Capturar clicks izquierdos accidentales en la apertura del navegador"
+
+#. i18n: file appletsettingswidget.ui line 62
+#: rc.cpp:15
+#, no-c-format
+msgid "Browser"
+msgstr "Navegador"
+
+#. i18n: file appletsettingswidget.ui line 102
+#: rc.cpp:18
+#, no-c-format
+msgid "Use the default KDE browser"
+msgstr "Utilizar el navegador predeterminado de KDE"
+
+#. i18n: file appletsettingswidget.ui line 140
+#: rc.cpp:21
+#, no-c-format
+msgid "Use an alternative browser"
+msgstr "Utilizar un navegador alternativo"
+
+#. i18n: file appletsettingswidget.ui line 149
+#: rc.cpp:24
+#, no-c-format
+msgid "Debug"
+msgstr "Depurar"
+
+#. i18n: file appletsettingswidget.ui line 164
+#. i18n: file prefs.kcfg line 40
+#: rc.cpp:27
+#: rc.cpp:99
+#, no-c-format
+msgid "Display an alert if GMail version changes"
+msgstr "Mostrar un mensaje de alerta si la versión de GMail cambia"
+
+#. i18n: file loginsettingswidget.ui line 16
+#: rc.cpp:30
+#, no-c-format
 msgid "LoginSettingsWidget"
 msgstr "LoginSettingsWidget"
 
-#: loginsettingswidget.cpp:70
+#. i18n: file loginsettingswidget.ui line 35
+#: rc.cpp:33
+#, no-c-format
 msgid "Username:"
 msgstr "Nombre de usuario:"
 
-#: loginsettingswidget.cpp:71
+#. i18n: file loginsettingswidget.ui line 46
+#: rc.cpp:36
+#, no-c-format
 msgid "Password:"
 msgstr "Clave:"
 
-#: main.cpp:34
-msgid "Application is being auto-started at KDE session start"
-msgstr "La aplicación se  iniciará automáticamente en el inicio de KDE"
+#. i18n: file loginsettingswidget.ui line 57
+#: rc.cpp:39
+#, no-c-format
+msgid "&Use KDE Wallet to store password"
+msgstr "&Usar KDE Wallet para guardar la clave"
 
-#: netsettingswidget.cpp:57
+#. i18n: file loginsettingswidget.ui line 60
+#. i18n: file netsettingswidget.ui line 67
+#: rc.cpp:42
+#: rc.cpp:57
+#, no-c-format
+msgid "Alt+U"
+msgstr "Alt+U"
+
+#. i18n: file netsettingswidget.ui line 16
+#: rc.cpp:45
+#, no-c-format
 msgid "NetworkSettingsWidget"
 msgstr "NetworkSettingsWidget"
 
-#: netsettingswidget.cpp:58
-msgid "Checking Interval"
-msgstr "Intervalo de comprobación"
+#. i18n: file netsettingswidget.ui line 27
+#: rc.cpp:48
+#, no-c-format
+msgid "Chec&king Interval"
+msgstr "&Intervalo de comprobación"
 
-#: netsettingswidget.cpp:59
+#. i18n: file netsettingswidget.ui line 39
+#: rc.cpp:51
+#, no-c-format
 msgid " seconds"
 msgstr " segundos"
 
-#: prefs.cpp:32
+#. i18n: file netsettingswidget.ui line 64
+#: rc.cpp:54
+#, no-c-format
+msgid "&Use https connections for checking mail"
+msgstr "&Usar conexiones https al obtener correo"
+
+#. i18n: file netsettingswidget.ui line 73
+#: rc.cpp:60
+#, no-c-format
+msgid "<blockquote>Use secure connections when checking for new mail. Note that the login procedure uses https regardless of this setting.</blockquote>"
+msgstr "<blockquote>Utilizar conexiones seguras al obtener correo nuevo. Notar que la identificación del usuario usa https a pesar del valor de esta opción.</blockquote>"
+
+#. i18n: file prefs.kcfg line 7
+#: rc.cpp:63
+#, no-c-format
 msgid "Polling interval"
-msgstr "Intervalo de control periódico"
+msgstr "Intervalo de verificación"
 
-#: prefs.cpp:33
+#. i18n: file prefs.kcfg line 11
+#: rc.cpp:66
+#, no-c-format
 msgid "How many seconds to wait before checking for new mail."
-msgstr "Cuantos segundos esperar antes de comprobar si existe nuevo correo."
+msgstr "Cuantos segundos esperar antes de comprobar si hay nuevo correo."
 
-#: prefs.cpp:39
+#. i18n: file prefs.kcfg line 14
+#: rc.cpp:69
+#, no-c-format
+msgid "Use https connections for checking mail"
+msgstr "Utilizar conexiones https al obtener correo"
+
+#. i18n: file prefs.kcfg line 16
+#: rc.cpp:72
+#, no-c-format
+msgid "Use secure connections when checking for new mail. Note that the login procedure uses https regardless of this setting."
+msgstr "Utilizar conexiones seguras al obtener correo nuevo. Notar que la identificación del usuario usa https a pesar del valor de esta opción."
+
+#. i18n: file prefs.kcfg line 22
+#: rc.cpp:75
+#, no-c-format
 msgid "Username"
 msgstr "Nombre de usuario"
 
-#: prefs.cpp:40
-msgid "Your Gmail username"
-msgstr "Tu nombre de usuario de Gmail"
+#. i18n: file prefs.kcfg line 23
+#: rc.cpp:78
+#, no-c-format
+msgid "Your Gmail username or your Google Hosted Domain email address"
+msgstr "Nombre de usuario de Gmail o la dirección de correo del Google Hosted Domain"
 
-#: prefs.cpp:43
+#. i18n: file prefs.kcfg line 26
+#: rc.cpp:81
+#, no-c-format
 msgid "Password"
-msgstr "Password"
+msgstr "Clave"
 
-#: prefs.cpp:44
+#. i18n: file prefs.kcfg line 27
+#: rc.cpp:84
+#, no-c-format
 msgid "Password for checking your Gmail account"
 msgstr "Tu clave para verificar la cuenta de Gmail"
 
-#: prefs.cpp:51
-msgid ""
-"If enabled, launch the default KDE web browser when the KCheckGmail icon is "
-"clicked."
+#. i18n: file prefs.kcfg line 30
+#: rc.cpp:87
+#, no-c-format
+msgid "Use KDE Wallet to store password"
+msgstr "Utilizar KDE Wallet para guardar la clave"
+
+#. i18n: file prefs.kcfg line 32
+#: rc.cpp:90
+#, no-c-format
+msgid "Use the KDE Wallet system to store your Gmail password."
+msgstr "Utilizar el sistema de KDE Wallet para guardar la clave de GMail."
+
+#. i18n: file prefs.kcfg line 35
+#: rc.cpp:93
+#, no-c-format
+msgid "Only search for new messages in inbox"
+msgstr "Únicamente buscar nuevos mensajes en la bandeja de entrada."
+
+#. i18n: file prefs.kcfg line 37
+#: rc.cpp:96
+#, no-c-format
+msgid "By disabling this option new messages are searched in anywhere (this includes spam, trash, etc)."
+msgstr "Al deshabilitar esta opción nuevos mensajes son buscados en todos lados (incluyendo correo no deseado, eliminados, etc)."
+
+#. i18n: file prefs.kcfg line 42
+#: rc.cpp:102
+#, no-c-format
+msgid "If Google update the GMail code, display an alert"
+msgstr "Si Google actualiza el código de GMail, mostrar una alerta"
+
+#. i18n: file prefs.kcfg line 50
+#: rc.cpp:108
+#, no-c-format
+msgid "If enabled, launch the default KDE web browser when the KCheckGmail icon is clicked."
 msgstr "Si está habilitado lanza el navegador por defecto de KDE al pursar el icono de KCheckGmail."
 
-#: prefs.cpp:55
-msgid ""
-"If enabled, every time you click on the KCheckGmail icon will disable it for "
-"a few seconds, thus preventing you from accidentaly opening more than one "
-"window"
+#. i18n: file prefs.kcfg line 55
+#: rc.cpp:114
+#, no-c-format
+msgid "If enabled, every time you click on the KCheckGmail icon will disable it for a few seconds, thus preventing you from accidentaly opening more than one window"
 msgstr "Si está habilitado, cada vez que pulses en el icono de KCheckGmail se deshabilitará por unos segundos, evitando abrir más de un navegador"
 
-#: prefs.cpp:58
+#. i18n: file prefs.kcfg line 58
+#: rc.cpp:117
+#, no-c-format
 msgid "Use the KDE default browser"
 msgstr "Utilizar el navegador predefinido de KDE"
 
-#: prefs.cpp:59
+#. i18n: file prefs.kcfg line 60
+#: rc.cpp:120
+#, no-c-format
 msgid "Use whatever browser is configured as the KDE default to check your Gmail"
 msgstr "Utilizar el navegador predefinido como navegador por defecto de KDE para comprobar Gmail"
 
-#: prefs.cpp:62 prefs.cpp:65
+#. i18n: file prefs.kcfg line 63
+#. i18n: file prefs.kcfg line 67
+#: rc.cpp:123
+#: rc.cpp:126
+#, no-c-format
 msgid "Use a custom browser"
 msgstr "Utilizar un navegador personalizado"
 
-#: prefs.cpp:66
+#. i18n: file prefs.kcfg line 69
+#: rc.cpp:129
+#, no-c-format
 msgid "Use a custom browser other than the KDE default to check your Gmail"
 msgstr "Utilizar un navegador personalizado en lugar del navegador KDE por defecto para comprobar Gmail"
 
